--- a/CardStack/app/src/main/res/layout/activity_main.xml
+++ b/CardStack/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -8,10 +8,55 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.chapman.cpsc356.cardstack.MainActivity">
+    tools:context="edu.chapman.cpsc356.cardstack.MainActivity"
+    android:onClick="switchCard">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="A"
+        android:textSize="40dp"
+        android:gravity="center"
+        android:textColor="@android:color/holo_red_dark"
+        android:textStyle="bold"
+        android:layout_gravity="left|top"
+        android:id="@+id/topNum" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/heart"
+        android:layout_gravity="left|top"
+        android:layout_marginTop="50dp"
+        android:id="@+id/topSuit"
+        />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/heart"
+        android:layout_gravity="right|bottom"
+        android:rotation="180"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/bottomSuit"
+        />
+
+    <TextView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="A"
+        android:textSize="40dp"
+        android:gravity="center"
+        android:textColor="@android:color/holo_red_dark"
+        android:textStyle="bold"
+        android:layout_gravity="right|bottom"
+        android:rotation="180"
+        android:id="@+id/bottomNum" />
+
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="450dp"
+        android:src="@drawable/ace_of_hearts"
+        android:layout_gravity="center"
+        android:id="@+id/centerImg" />
+</FrameLayout>
