--- a/CardStack/app/src/main/res/layout/linear_card_layout.xml
+++ b/CardStack/app/src/main/res/layout/linear_card_layout.xml
@@ -26,21 +26,20 @@
         />
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/heart"
+        android:layout_width="250dp"
+        android:layout_height="450dp"
+        android:layout_weight="1"
+        android:src="@drawable/ace_of_hearts"
         android:layout_gravity="center"
-        android:layout_marginTop="75dp"
-        android:layout_marginBottom="75dp"
         android:id="@+id/centerHeart" />
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/heart"
-        android:layout_gravity="bottom"
+        android:layout_gravity="right"
         android:rotation="180"
-        android:layout_marginLeft="310dp"
+        android:layout_marginRight="15dp"
         />
 
     <TextView
@@ -51,9 +50,9 @@
         android:gravity="center"
         android:textColor="@android:color/holo_red_dark"
         android:textStyle="bold"
-        android:layout_gravity="bottom"
+        android:layout_gravity="right"
         android:rotation="180"
-        android:layout_marginLeft="310dp"
+        android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
         android:id="@+id/textView" />
 
