--- a/CardStack/app/src/main/res/layout/relative_card_layout.xml
+++ b/CardStack/app/src/main/res/layout/relative_card_layout.xml
@@ -13,7 +13,7 @@
         android:textStyle="bold"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
-        />
+        android:id="@+id/textView3" />
 
     <ImageView
         android:layout_width="50dp"
@@ -21,6 +21,15 @@
         android:src="@drawable/heart"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="60dp"
+        android:id="@+id/imageView3" />
+
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="450dp"
+        android:src="@drawable/ace_of_hearts"
+        android:id="@+id/centerHeart"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         />
 
     <ImageView
@@ -29,17 +38,11 @@
         android:src="@drawable/heart"
         android:layout_gravity="bottom"
         android:rotation="180"
-        android:layout_marginLeft="310dp"
         android:layout_marginBottom="60dp"
-        android:layout_alignParentBottom="true"/>
-
-    <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/heart"
-        android:id="@+id/centerHeart"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginRight="15dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/imageView2" />
 
     <TextView
         android:layout_width="50dp"
@@ -50,9 +53,11 @@
         android:textColor="@android:color/holo_red_dark"
         android:textStyle="bold"
         android:rotation="180"
-        android:layout_marginLeft="310dp"
+        android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-         />
+        android:id="@+id/textView2" />
+
 
 </RelativeLayout>
